Tue Apr 14 05:17:36 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* layout corrections for kscd magic dialog 

Sat Jan 17 21:36:27 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* Enabled CDDB support. A couple of clean ups and fixes.

Tue Jan 13 03:24:49 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* applied Sebestyen Zoltan <szoli@digo.inf.elte.hu> FreeBSD patch.

Thu Jan  1 19:08:22 1998  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Monster commit: Commit cddb and web integration additions
	  Let the games begin!

Fri Dec 26 13:48:56 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* headerfile changes in plat_bsd.c

Sat Oct 25 11:13:40 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* fixed the segfault problem when you didn't have acess permissions
	  to the cdrom device

Thu Aug 14 19:49:18 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* added irix support
        * added KSCD configuration script

Wed Jun 25 01:24:39 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* added Marc van Kempen's FreeBSD patches
	  He reports also strange behaviour of kscd when reloading a CD
	  Is this with the code or with his CD drive ? 

	* Set proper defines that should allow for a smooth compile 
	  on a SUN/ SUN SOLARIS
	
