@@ -1,16 +1,26 @@
 /**********************************************************************
 
-	--- Dlgedit generated file ---
+	--- Qt Architect generated file ---
 
 	File: CDDBSetup.cpp
-	Last generated: Wed Dec 31 22:53:06 1997
+	Last generated: Mon Apr 13 23:02:42 1998
 
  *********************************************************************/
 
+/*
+ * This file was initialy generated by QTArchitect, but was heavily modified
+ * afterwards.
+ */
+
 #include "CDDBSetup.h"
 
-
 #define Inherited CDDBSetupData
+
+#include <kapp.h>
+#include <cddb.h>
+#include <qvalidator.h> 
+#include <limits.h>
+#include <stdlib.h>
 
 extern KApplication 	*mykapp;
 
@@ -22,7 +32,6 @@ CDDBSetup::CDDBSetup
 	:
 	Inherited( parent, name )
 {
-
 
 
   QString temp;
@@ -53,9 +62,13 @@ CDDBSetup::CDDBSetup
 
   //  submit_edit->setEnabled(false);
 
+  QIntValidator *port_validator=new QIntValidator(this,"HTTP Port Validator");
+  port_validator->setRange(0, INT_MAX );  
+  proxy_port_ef->setValidator(port_validator); 
 
+  proxy_port_ef->setEnabled(cddb_http_cb->isChecked());
+  proxy_host_ef->setEnabled(cddb_http_cb->isChecked());
 }
-
 
 CDDBSetup::~CDDBSetup()
 {
@@ -92,9 +105,14 @@ void CDDBSetup::help(){
 }
 
 void CDDBSetup::insertData(const QStrList& _serverlist,
-			   const QString& _basedir,const QString& _submitaddress,
+			   const QString& _basedir,
+			   const QString& _submitaddress,
 			   const QString& _current_server,
-			   const bool& remote_enabled){
+			   const bool&    remote_enabled,
+			   const bool&    http_proxy_enabled,
+			   const QString& http_proxy_host,
+			   const int&     http_proxy_port)
+{
 
   server_listbox->setAutoUpdate(false);
   server_listbox->clear();
@@ -109,14 +127,19 @@ void CDDBSetup::insertData(const QStrList& _serverlist,
   current_server_string = _current_server.copy();
   current_server_label->setText(current_server_string.data());
   remote_cddb_cb->setChecked(remote_enabled);
-
+  cddb_http_cb->setChecked(http_proxy_enabled);
+  proxy_host_ef->setText(http_proxy_host);
+  char port_str[40];
+  sprintf(port_str,"%d",http_proxy_port);
+  proxy_port_ef->setText(port_str);
 }
 
-void CDDBSetup::set_defaults(){
+void CDDBSetup::set_defaults()
+{
 
   server_listbox->setAutoUpdate(false);
   server_listbox->clear();
-  server_listbox->insertItem("cddb.cddb.com cddbp 888 -", -1);
+  server_listbox->insertItem(DEFAULT_CDDB_SERVER, -1);
   server_listbox->setAutoUpdate(true);
   server_listbox->repaint();
 
@@ -126,16 +149,24 @@ void CDDBSetup::set_defaults(){
 
   submitaddressstring = "xmcd-cddb@amb.org";
   submit_edit->setText(submitaddressstring);
-  current_server_string = "cddb.cddb.com cddbp 888 -";
+  current_server_string = DEFAULT_CDDB_SERVER;
   current_server_label->setText(current_server_string.data());
   remote_cddb_cb->setChecked(true);
+  cddb_http_cb->setChecked(false);
+  proxy_host_ef->setText("");
+  proxy_port_ef->setText("0");
   emit updateCurrentServer();
 
 }
-void CDDBSetup::getData(QStrList& _serverlist,QString& _basedir,
+void CDDBSetup::getData(QStrList& _serverlist,
+			QString& _basedir,
 			QString& _submitaddress, 
 			QString& _current_server,
-			bool& remote_enabled){
+			bool&    remote_enabled,
+			bool&    http_proxy_enabled,
+			QString  &http_proxy_host,
+			int      &http_proxy_port)
+{
 
   _serverlist.clear();
   for(uint i = 0; i < server_listbox->count();i++){
@@ -144,9 +175,11 @@ void CDDBSetup::getData(QStrList& _serverlist,QString& _basedir,
   _basedir = basedirstring.copy();
   _submitaddress = submitaddressstring.copy();
 
-  _current_server = current_server_string.copy();
-  remote_enabled = remote_cddb_cb->isChecked();
-
+  _current_server     = current_server_string.copy();
+  remote_enabled      = remote_cddb_cb->isChecked();
+  http_proxy_enabled  = cddb_http_cb->isChecked();
+  http_proxy_host     = proxy_host_ef->text();
+  http_proxy_port     = atoi(proxy_port_ef->text());
 }
 
 void CDDBSetup::getCurrentServer(QString& ser){
@@ -167,6 +200,12 @@ void CDDBSetup::insertServerList(QStrList& list){
   server_listbox->insertStrList(&list, -1);
   server_listbox->setAutoUpdate(true);
   server_listbox->repaint();
+}
+
+void CDDBSetup::http_access_toggled(bool state)
+{
+    proxy_port_ef->setEnabled(state);
+    proxy_host_ef->setEnabled(state);
 }
 
 #include "CDDBSetup.moc"
