@@ -7,52 +7,71 @@ Dialog {
 	DataSource {CDDBSetupData.cpp}
 	DataName {CDDBSetupData}
 	WindowBaseClass {QWidget}
+	WindowFlags {0}
 }
 WidgetLayout {
-		Rect {5 102 385 420}
-		Grid {5}
+InitialPos {-1 -1}
+Size {385 465}
+MinSize {0 0}
+MaxSize {32767 32767}
+Grid {5}
 
 GroupBox {
 		Title {}
 		Alignment {Left}
 		Style {49}
-		Rect {10 10 365 360}
+		Rect {5 10 365 420}
 		Name {GroupBox_1}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 Label {
 		Text {CDDB Base Directory}
 		AutoResize {FALSE}
 		Margin {-1}
-		Rect {20 55 160 20}
+		Rect {20 120 160 20}
 		Name {Label_8}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 LineEdit {
 		Text {}
 		EchoMode {Normal}
 		MaxLength {32767}
 		FrameShown {TRUE}
-		Rect {20 75 340 28}
+		Rect {20 140 340 28}
 		Name {LineEdit_4}
 		Variable {basedir_edit}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 Label {
 		Text {Send CDDB submissions to:}
 		AutoResize {FALSE}
 		Margin {-1}
-		Rect {20 115 210 20}
+		Rect {20 180 210 20}
 		Name {Label_9}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 LineEdit {
 		Text {cddb-test@xmcd.com}
 		EchoMode {Normal}
 		MaxLength {32767}
 		FrameShown {TRUE}
-		Rect {20 135 240 28}
+		Rect {20 200 240 28}
 		Name {LineEdit_5}
 		Variable {submit_edit}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 ListBox {
-		Item {cddb.cddb.com 888}
+		Item {cddb.cddb.com cddbp 8880 -}
 		DragSelect {TRUE}
 		AutoScroll {TRUE}
 		ScrollBar {FALSE}
@@ -60,18 +79,25 @@ ListBox {
 		BottomScrollBar {FALSE}
 		AutoBottomScrollBar {TRUE}
 		SmoothScrolling {TRUE}
+		MultiSelection {FALSE}
 		Style {51}
 		LineWidth {2}
-		Rect {20 225 240 135}
+		Rect {20 290 240 135}
 		Name {ListBox_2}
 		Variable {server_listbox}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 Label {
 		Text {CDDB server}
 		AutoResize {FALSE}
 		Margin {-1}
-		Rect {20 175 235 20}
+		Rect {20 240 235 20}
 		Name {Label_10}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 PushButton {
 		ToggleButton {FALSE}
@@ -80,9 +106,12 @@ PushButton {
 		Text {Update}
 		AutoRepeat {FALSE}
 		AutoResize {FALSE}
-		Rect {270 230 90 25}
+		Rect {270 295 90 25}
 		Name {PushButton_7}
 		Variable {update_button}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 Label {
 		Text {}
@@ -90,18 +119,24 @@ Label {
 		Margin {-1}
 		Style {51}
 		LineWidth {2}
-		Rect {20 195 240 28}
+		Rect {20 260 240 28}
 		Name {Label_4}
 		Variable {current_server_label}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 CheckBox {
 		Checked {FALSE}
 		Text {Enable Remote CDDB}
 		AutoRepeat {FALSE}
 		AutoResize {FALSE}
-		Rect {25 20 230 30}
+		Rect {25 15 230 30}
 		Name {CheckBox_1}
 		Variable {remote_cddb_cb}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 PushButton {
 		ToggleButton {FALSE}
@@ -110,9 +145,12 @@ PushButton {
 		Text {Defaults}
 		AutoRepeat {FALSE}
 		AutoResize {FALSE}
-		Rect {270 280 90 25}
+		Rect {270 345 90 25}
 		Name {PushButton_2}
 		Variable {defaults_button}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
 }
 PushButton {
 		ToggleButton {FALSE}
@@ -121,7 +159,69 @@ PushButton {
 		Text {Help}
 		AutoRepeat {FALSE}
 		AutoResize {FALSE}
-		Rect {270 335 90 25}
+		Rect {270 400 90 25}
 		Name {PushButton_3}
 		Variable {help_button}
-}}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+CheckBox {
+		Checked {FALSE}
+		Text {Use HTTP proxy to access CDDB}
+		AutoRepeat {FALSE}
+		AutoResize {FALSE}
+		Rect {25 40 230 30}
+		Name {CheckBox_2}
+		Variable {cddb_http_cb}
+		Signal {[Protected]  toggled --> http_access_toggled  (bool)}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+LineEdit {
+		Text {}
+		EchoMode {Normal}
+		MaxLength {5}
+		FrameShown {TRUE}
+		Rect {315 75 45 30}
+		Name {LineEdit_6}
+		Variable {proxy_port_ef}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+LineEdit {
+		Text {}
+		EchoMode {Normal}
+		MaxLength {32767}
+		FrameShown {TRUE}
+		Rect {70 75 230 30}
+		Name {LineEdit_7}
+		Variable {proxy_host_ef}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+Label {
+		Text {HTTP://}
+		AutoResize {FALSE}
+		Margin {-1}
+		Rect {25 75 45 30}
+		Name {Label_12}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+Label {
+		Text {:}
+		AutoResize {FALSE}
+		Margin {-1}
+		Rect {305 75 10 30}
+		Name {Label_13}
+		LayoutStatus {NoLayout}
+		MinimumSize {10 10}
+		MaximumSize {32767 32767}
+}
+Layout {None}
+}
