@@ -1,17 +1,22 @@
 /**********************************************************************
 
-	--- Dlgedit generated file ---
+	--- Qt Architect generated file ---
 
 	File: CDDBSetup.h
-	Last generated: Wed Dec 31 22:53:06 1997
+	Last generated: Mon Apr 13 23:02:42 1998
 
  *********************************************************************/
+
+
+/*
+ * This file was initialy generated by QTArchitect, but was heavily modified
+ * afterwards.
+ */
 
 #ifndef CDDBSetup_included
 #define CDDBSetup_included
 
 #include "CDDBSetupData.h"
-#include <kapp.h>
 #include <qstrlist.h>
 
 class CDDBSetup : public CDDBSetupData
@@ -32,16 +37,30 @@ public slots:
    void basedir_changed(const char* str);
    void submitaddress_changed(const char* str);
    void serverlist_update();
-   void getData(QStrList& _serverlist,QString& _basedir,QString& _submitaddress,
-		QString& _current_server, bool& _remote_enabled);
+   void getData(QStrList& _serverlist,
+		QString& _basedir,
+		QString& _submitaddress,
+		QString& _current_server,
+		bool& _remote_enabled,
+		bool&    http_proxy_enabled,
+		QString  &http_proxy_host,
+		int      &http_proxy_port);
    void insertData(const QStrList& _serverlist,
-		   const QString& _basedir,const QString& _submitaddress,
+		   const QString& _basedir,
+		   const QString& _submitaddress,
 		   const QString& _current_server, 
-		   const bool& _remote_enabled);
+		   const bool&    _remote_enabled,
+		   const bool&    http_proxy_enabled,
+		   const QString  &http_proxy_host,
+		   const int      &http_proxy_port);
    void set_current_server(int i);
    void set_defaults();
    void help();
    void enable_remote_cddb(bool en);
+
+protected slots:
+
+    virtual void http_access_toggled(bool);
 
 signals:
    void updateCDDBServers();
@@ -57,5 +76,6 @@ private:
    QString submitaddressstring;
    QString current_server_string;
 
+    
 };
 #endif // CDDBSetup_included
