@@ -1,12 +1,12 @@
 /**********************************************************************
 
-	--- Dlgedit generated file ---
+	--- Qt Architect generated file ---
 
 	File: CDDBSetupData.h
-	Last generated: Thu Jan 1 13:42:16 1998
+	Last generated: Tue Apr 14 01:15:07 1998
 
 	DO NOT EDIT!!!  This file will be automatically
-	regenerated by dlgedit.  All changes will be lost.
+	regenerated by qtarch.  All changes will be lost.
 
  *********************************************************************/
 
@@ -14,11 +14,11 @@
 #define CDDBSetupData_included
 
 #include <qwidget.h>
-#include <qchkbox.h>
 #include <qlabel.h>
-#include <qlined.h>
-#include <qlistbox.h>
+#include <qchkbox.h>
 #include <qpushbt.h>
+#include <qlistbox.h>
+#include <qlined.h>
 
 class CDDBSetupData : public QWidget
 {
@@ -39,6 +39,7 @@ public slots:
 
 protected slots:
 
+    virtual void http_access_toggled(bool);
 
 protected:
     QLineEdit* basedir_edit;
@@ -49,6 +50,9 @@ protected:
     QCheckBox* remote_cddb_cb;
     QPushButton* defaults_button;
     QPushButton* help_button;
+    QCheckBox* cddb_http_cb;
+    QLineEdit* proxy_port_ef;
+    QLineEdit* proxy_host_ef;
 
 };
 
