@@ -262,6 +262,9 @@ private:
 	QString  	submitaddress;
 	QString  	browsercmd;
 	bool		cddb_remote_enabled;
+	bool	        cddb_proxy_enabled;
+	QString         cddb_proxy_host;
+	int             cddb_proxy_port;
 	bool 		use_kfm;
 	bool            docking;
 	bool 		cddb_inexact_sentinel;
